--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
+  "expo": {
+    "packagerOpts": {
+      "liveReload": true
+    }
+  },
   "name": "tinkoff",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
@@ -9,10 +14,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^19.0.0",
+    "@react-navigation/native": "^6.1.9",
+    "dayjs": "^1.11.10",
     "expo": "~49.0.15",
+    "expo-linear-gradient": "~12.3.0",
     "expo-status-bar": "~1.6.0",
+    "firebase": "^10.5.0",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-dom": "18.2.0",
+    "react-native": "0.72.6",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-stories-view": "^1.0.9",
+    "react-native-web": "~0.19.6",
+    "tailwind-rn": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
